--- a/static/third.css
+++ b/static/third.css
@@ -50,21 +50,50 @@ body {
   cursor: pointer;
 }
 
-    .btn:hover {
-        background-image: linear-gradient(rgb(34, 92, 29), rgb(13, 24, 12));
-        transition-duration: 0.2s;
-        text-align: center;
-        font-size: 22px;
-        font-weight: 200;
-        color: rgb(0, 255, 55);
-        box-shadow: 0 4px rgba(22,32,32,.9);
-        transform: translateY(4px);
-    }
+.btn:hover {
+    background-image: linear-gradient(rgb(34, 92, 29), rgb(13, 24, 12));
+    transition-duration: 0.2s;
+    text-align: center;
+    font-size: 22px;
+    font-weight: 200;
+    color: rgb(0, 255, 55);
+    box-shadow: 0 4px rgba(22,32,32,.9);
+    transform: translateY(4px);
+}
 
 .btn:active {
   background-color: #495549;
   color: rgb(0, 255, 42);
   }
+
+.btn-b {
+    border: 1px solid rgb(0, 255, 55);
+    color: rgb(234, 254, 254);
+    background-image: linear-gradient(rgb(112, 151, 108), rgb(29, 40, 29));
+    box-shadow: 0 8px rgba(12,12,12,.9);
+    float: right;
+    padding: 2px 10px;
+    border-radius: 8px;
+    font-size: 22px;
+    font-weight: 200;
+    cursor: pointer;
+}
+
+.btn-b:hover {
+    background-image: linear-gradient(rgb(34, 92, 29), rgb(13, 24, 12));
+    transition-duration: 0.2s;
+    text-align: center;
+    font-size: 22px;
+    font-weight: 200;
+    color: rgb(0, 255, 55);
+    box-shadow: 0 4px rgba(22,32,32,.9);
+    transform: translateY(4px);
+}
+
+.btn-b:active {
+    background-color: #495549;
+    color: rgb(0, 255, 42);
+}
 
 h1 {
   text-align: center;
@@ -322,4 +351,16 @@ hr{border-top: 20px solid #000;}
 .holographic-card:hover::before {
     opacity: .6;
     transform: rotate(-45deg) translateY(100%);
+}
+
+* {
+    /* Reset browser's padding and margin */
+    margin: 30;
+    padding: 30;
+    box-sizing: border-box;
+}
+
+input[type=text] {
+    border: 2px solid green;
+    border-radius: 4px;
 }
