--- a/static/tp4.css
+++ b/static/tp4.css
@@ -1,21 +1,37 @@
-/* Author: Scott Hamilton */
-/* css code learning going on in here */
-
 body {
-  font-family: "Iceland", Arial;
-  background-color: rgb(30, 31, 30);
-  color: rgb(255, 255, 255);
+    background-color: white;
 }
 
-nav {
-    text-align: center;
+.hovernow {
+    background-color: red;
+    width: 100px;
+    height: 100px;
+    margin: auto;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
 }
 
-nav li {
+.hovernow:hover {
+    background-color: green;
+    border-radius: 50px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.8);
+    transform: translateY(4px);
+    transform: scale(1.1);
+    transition: all 0.5s ease-in-out;
+}
+
+.nav {
+    background-color: rgba(12,12,12,0);
     list-style-type: none;
-    display: inline;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+}
+
+.nav li {
+    display: inline-block;
+    font-size: 22px;
     margin: 20px;
-    padding: 20px;
+    padding: 10px;
     vertical-align: middle;
 }
 
@@ -26,7 +42,7 @@ nav li {
     box-shadow: 0 8px rgba(12,12,12,.9);
     padding: 2px 10px;
     border-radius: 8px;
-    font-size: 16px;
+    font-size: 22px;
     font-weight: 200;
     cursor: pointer;
 }
@@ -35,19 +51,21 @@ nav li {
     background-image: linear-gradient(rgb(34, 92, 29), rgb(13, 24, 12));
     transition-duration: 0.2s;
     text-align: center;
-    font-size: 16px;
+    font-size: 22px;
     font-weight: 200;
-    color: rgb(0, 255, 55);
+    color: rgb(0, 255, 0);
+    box-shadow: 0 4px rgba(22,32,32,.9);
+    transform: translateY(4px);
 }
 
 .btn:active {
     background-color: #495549;
     color: rgb(0, 255, 42);
-    box-shadow: 0 4px #30312f;
-    transform: translateY(4px);
 }
 
 h1 {
+    font-size: 80px;
+    font-weight: 500;
     text-align: center;
 }
 
@@ -57,39 +75,38 @@ h1 {
     color: mediumspringgreen;
 }
 
+.p-a {
+    font-size: 20px;
+    text-align: center;
+}
+
 .iceland-regular {
-  font-family: "Iceland", sans-serif;
-  font-weight: 100;
-  font-style: normal;
+    font-family: "Iceland", sans-serif;
+    font-weight: 100;
+    font-style: normal;
 }
 
 /* unvisited link */
 a:link {
-    color: rgb(240, 250, 250);
-    font-family: "Iceland", sans-serif;
-    font-size: 22px;
-    text-decoration: none;
+    color: rgb(200, 255, 200);
+    -moz-text-decoration-line: none;
+    text-decoration-line: none;
 }
 /* visited link */
 a:visited {
-    color: rgb(240, 250, 250);
-    font-family: "Iceland", sans-serif;
-    font-size: 22px;
-    text-decoration: none;
+    color: rgb(200, 200, 255);
 }
 
 /* mouse over link */
 a:hover {
-    color: rgb(80, 250, 80);
-    font-family: "Iceland", sans-serif;
-    font-size: 22px;
-    text-decoration: none;
+    color: rgb(0, 255, 0);
 }
 
 /* selected link */
 a:active {
     color: rgb(255, 255, 255);
 }
+
 .overline {
     text-decoration: overline;
 }
@@ -106,33 +123,23 @@ a:active {
     text-decoration: underline overline;
 }
 
-.nodeco {
-    text-decoration: none;
+.section-a {
+    background-color: rgb(22, 32, 22);
+    display: flex;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-align-items: center;
+    align-items: center;
+    font-size: 26px;
+    text-align: center;
+    color: rgb(240, 255, 250);
+    width: 100%;
+    height: 300px;
+    margin: 0;
+    padding: 0;
 }
 
-p {
-    font-family: "Iceland", Arial;
-    font-weight: 100;
-    font-size: 18px;
-}
-
-.para {
-    font-family: "Iceland", Arial;
-    font-weight: 100;
-    font-size: 18px;
-}
-
-.grid-container {
-    display: inline-grid;
-    grid-template-columns: auto auto auto auto auto auto auto;
-    gap: 20px;
-    background-color: rgb(30, 31, 30);
-    padding: 40px;
-}
-
-.grid-container > div {
-    background-color: rgb(30, 31, 30);
-    color: #fff;
-    padding: 10px;
-    font-size: 22px;
+.section-a:hover {
+    background-image: radial-gradient(rgba(100, 200, 50, .9), rgba(22, 32, 22, 1));
+    color: black;
 }
