--- a/static/third.css
+++ b/static/third.css
@@ -1,10 +1,15 @@
 /* Author: Scott Hamilton */
-/* css code learning going on in here */
+/* css code learning going on in here 
+
+        color: rgb(255, 255, 255);    
+    background-color: rgb(30, 31, 30);
+*/
 
 body {
-    font-family: "Iceland", Arial;
-    background-color: rgb(30, 31, 30);
+    font-family: "Iceland", sans-serif;
     color: rgb(255, 255, 255);
+    background-color: rgb(30, 31, 30);
+    margin: 30px;
 }
 
 .bga {
@@ -13,10 +18,21 @@ body {
 }
 
 .border {
+    font-family: "Jura", sans-serif;
+    text-align: justify;
     border-style: solid;
-    border-color: green;
-    border-width: 1px;
-    background-color: rgba(8, 10, 8, .6);
+    border-color: limegreen;
+    border-width: 2px;
+    background-color: rgba(18, 20, 18, 1);
+    color: white;
+    margin: 2px 10px 20px 10px;
+    padding: 20px;
+}
+
+.border p {
+    font-family: "Jura", sans-serif;
+    text-align: justify;
+    background-color: rgba(18, 20, 18, 1);
     color: white;
     margin: 10px;
     padding: 5px;
@@ -39,15 +55,16 @@ body {
 }
 
 .btn {
-  border: 1px solid rgb(0, 255, 55);
-  color: rgb(234, 254, 254);
-  background-image: linear-gradient(rgb(112, 151, 108), rgb(29, 40, 29));
-  box-shadow: 0 8px rgba(12,12,12,.9);
-  padding: 2px 10px;
-  border-radius: 8px;
-  font-size: 22px;
-  font-weight: 200;
-  cursor: pointer;
+    font-family: "Iceland", sans-serif;
+    border: 1px solid rgb(0, 255, 55);
+    color: rgb(234, 254, 254);
+    background-image: linear-gradient(rgb(112, 151, 108), rgb(29, 40, 29));
+    box-shadow: 0 8px rgba(12,12,12,.9);
+    padding: 2px 10px;
+    border-radius: 8px;
+    font-size: 22px;
+    font-weight: 200;
+    cursor: pointer;
 }
 
 .btn:hover {
@@ -96,15 +113,29 @@ body {
 }
 
 h1 {
-  text-align: center;
-  font-weight: 500;
-  font-size: 60px;
+    font-family: "Iceland", Arial;
+    text-align: center;
+    font-weight: 600;
+    font-size: 80px;
 }
 
 h2 {
-    font-size: 40px;
-    font-weight: 300;
-    color: white;
+    font-family: "Iceland", Arial;
+    font-size: 30px;
+    font-weight: 800;
+    text-shadow: 3px 3px 2px #002000;
+    text-align: left;
+    margin: 0;
+}
+
+h3 {
+    font-family: "Iceland", Arial;
+    font-size: 24px;
+    font-weight: 200;
+    text-shadow: 3px 3px 2px #002000;
+    text-align: left;
+    padding: 4px;
+    margin: 10px;
 }
 
 .h4 {
@@ -121,22 +152,26 @@ h2 {
 
 /* unvisited link */
 a:link {
-  color: rgb(240, 255, 250);
-  text-decoration: none;
+  color: rgb(20, 255, 50);
+  font-weight: 400;
+  text-decoration: underline;
 }
 
 /* visited link */
 a:visited {
-    color: rgb(240, 255, 250);
+    font-weight: 400;
+    color: rgb(50, 255, 20);
 }
 
 /* mouse over link */
 a:hover {
+    font-weight: 400;
     color: rgb(0, 255, 55);
 }
 
 /* selected link */
 a:active {
+    font-weight: 400;
     color: rgb(255, 255, 255);
 }
 
@@ -159,13 +194,24 @@ a:active {
 p {
     font-family: "Iceland", Arial;
     font-weight: 100;
-    font-size: 18px;
+    font-size: 22px;
+    padding: 4px;
+    margin: 10px;
 }
 
 .p-a {
     font-size: 40px;
     font-weight:100;
     text-align: center;
+}
+
+.p-b {
+    font-family: "Jura", Arial;
+    font-weight: 100;
+    font-size: 16px;
+    padding: 4px;
+    margin: 10px;
+    text-align: justify;
 }
 
 .para {
@@ -363,4 +409,48 @@ hr{border-top: 20px solid #000;}
 input[type=text] {
     border: 2px solid green;
     border-radius: 4px;
+}
+
+.section-a {
+    background-color: rgb(30, 31, 30);
+    display: flex;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-align-items: center;
+    align-items: center;
+    font-size: 50px;
+    text-align: center;
+    color: white;
+    width: 100%;
+    height: 400px;
+    margin: 0;
+    padding: 0;
+}
+
+    .section-a:hover {
+        background-color: rgb(30, 31, 30);
+        color: black;
+        transition: all 1.0s ease;
+        text-shadow: 0 0 5px #00dd00;
+    }
+
+.p-a {
+    text-align: center;
+}
+
+.bg-b {
+    background-image: url("images/Hexagons_Physical_06_3.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100% 100%;
+    background-blend-mode: darken;
+}
+
+.in-a {
+    font-size: 16px;
+    padding: 6px;
+    border-width: 4px;
+    border-color: lime;
+    border-radius: 12px;
+    margin: 4px;
 }
